contact us button

--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -5,6 +5,8 @@
 html {
     height: 100%;
     margin: 0;
+    font-family: "lato";
+    line-height: 1.2;
 }
 
 body {
@@ -12,100 +14,143 @@ body {
     margin: 0;
     padding: 0;
     background-color: #EBF3FA;
-    font-family: 'Lato', sans-serif;
 }
 
 /* navigation */
 
-.topnav {
-    height: 55px;
+.navbar {
+    display: flex;
     position: fixed;
+    top: 0;
     width: 100%;
-    margin-top: -5%;
+    height: auto;
+    justify-content: space-between;
+    align-items: center;
     background-color: #EBF3FA;
-    overflow: hidden;
-    font-size: 16px;
     box-shadow: 5px 2px 6px #888888a6;
     z-index: 6;
 }
 
-#logo {
-    margin-left: 50px;
-}
-
 .logo {
     float: left;
+    margin-left: 3%;
+    display: flex;
+    align-items: center;
+    padding: 10px;
 }
 
-.topnav a {
-    float: right;
-    color: #F1A34F;
-    text-align: center;
-    padding: 14px 16px;
+.logo img {
+    width: 3.7vw;
+    height: auto;
+}
+
+.navbar-links {
+    height: 100%;
+    margin-right: 3%;
+}
+
+.navbar-links ul {
+    display: flex;
+}
+
+.navbar-links li {
+    list-style: none;
+}
+
+.navbar-links li a {
+    display: block;
     text-decoration: none;
-    font-size: 18px;
-    padding-right: 60px;
-}
-
-.topnav a:hover {
+    font-size: 1.2vw;
     color: #F1A34F;
-    border-radius: 7px;
+    padding-right: 25px;
+    padding-left: 25px;
 }
 
-.topnav a.active {
-    color: #203F7E;
-}
-
-.topnav .icon {
+.toggle-button {
+    position: absolute;
+    right: 1rem;
+    top: 1.5rem;
     display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
 }
 
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: #F1A34F;
+    border-radius: 10px;
+}
+
+@media (max-width: 800px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .logo img {
+        width: 7vw;
+        height: auto;
+    }
+    .toggle-button {
+        display: flex;
+    }
+    .navbar-links {
         display: none;
+        width: 100%;
+        background-color: #203F7E;
     }
-    .topnav a.icon {
-        float: right;
-        display: block;
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
     }
-    .topnav.responsive {
-        position: relative;
-    }
-    .topnav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .topnav.responsive a {
-        float: none;
-        color: #203F7E;
-        display: block;
+    .navbar-links ul li {
         text-align: center;
+    }
+    .navbar-links.active {
+        display: flex;
+    }
+    .navbar-links li a {
+        font-size: 3vw;
+        color: #F1A34F;
+        padding: 15px;
+    }
+    .buttonStyle2 {
+        font-size: 2vw;
+    }
+    .buttonStyle2 i {
+        font-size: 2vw;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .logo img {
+        width: 10vw;
+        height: auto;
+    }
+    .toggle-button {
+        top: 1rem;
     }
 }
 
 /*----------------- Contact Us btn -----------------*/
 
-.buttonStyle1-act {
+.buttonStyle1 {
+    font-size: 1vw;
     background-color: #F1A34F;
-    color: #203F7E;
+    color: #ffffff;
     border: none;
-    padding-bottom: 15px 5px;
+    padding: 5px;
     cursor: pointer;
     border-radius: 7px;
     box-shadow: 0 5px rgba(48, 48, 48, 0.23);
     outline: none;
 }
 
-.buttonStyle1 {
-    background-color: #F1A34F;
-    color: #ffffff;
-    border: none;
-    padding-bottom: 15px 5px;
-    cursor: pointer;
-    border-radius: 7px;
-    box-shadow: 0 5px rgba(48, 48, 48, 0.23);
-    outline: none;
+.buttonStyle1 i {
+    font-size: 1vw;
+    padding-right: 0.5vw;
 }
 
 .buttonStyle1:active {
