--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -116,11 +116,11 @@ body {
         color: #F1A34F;
         padding: 15px;
     }
-    .buttonStyle2 {
-        font-size: 2vw;
+    .buttonStyle1 {
+        font-size: 3vw;
     }
-    .buttonStyle2 i {
-        font-size: 2vw;
+    .buttonStyle1 i {
+        font-size: 3vw;
     }
 }
 
@@ -128,9 +128,26 @@ body {
     .logo img {
         width: 10vw;
         height: auto;
+        margin-top: 10px;
     }
-    .toggle-button {
+    /*  .toggle-button {
         top: 1rem;
+    } */
+    .buttonStyle1 {
+        font-size: 1.4vw;
+        background-color: #F1A34F;
+        height: 100px;
+        color: #ffffff;
+        border: none;
+        padding: 5px;
+        cursor: pointer;
+        border-radius: 7px;
+        box-shadow: 0 5px rgba(48, 48, 48, 0.23);
+        outline: none;
+    }
+    .buttonStyle1 i {
+        font-size: 3vw;
+        padding-right: 0.5vw;
     }
 }
 
@@ -161,10 +178,6 @@ body {
 
 .buttonStyle1:hover {
     outline: none;
-}
-
-.contact-button {
-    margin-top: 7%;
 }
 
 /* ------------------Arrow style------------- */
@@ -404,6 +417,10 @@ footer {
     float: left;
     margin-top: -8%;
     margin-left: 20px;
+}
+
+a {
+    color: white;
 }
 
 /* -----------------Responsive----------------- */
