--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -184,43 +184,6 @@ body {
     margin-top: 50px;
 }
 
-.fa {
-    font-size: 10px;
-}
-
-/* #button-fix i {
-    margin-right: -20px;
-} */
-
-/* .buttonStyle2 {
-    font-size: 1vw;
-    background-color: #F1A34F;
-    color: #ffffff;
-    border: none;
-    padding: 5px;
-    cursor: pointer;
-    border-radius: 7px;
-    box-shadow: 0 5px rgba(48, 48, 48, 0.23);
-    outline: none;
-    width: 138px;
-    height: 35px;
-}
-
-.buttonStyle2 i {
-    font-size: 1vw;
-    padding-right: 3vw;
-} */
-
-/* .buttonStyle2:active {
-    box-shadow: 0 2px white;
-    transform: translateY(4px);
-    outline: none;
-}
-
-.buttonStyle2:hover {
-    outline: none;
-} */
-
 /* ------------------Arrow style------------- */
 
 .arrow {
@@ -348,14 +311,6 @@ body {
     color: white;
 }
 
-/* .service-tab i:hover {
-    color: white;
-} */
-
-/* .tab button.active {
-    background-color: rgb(100, 219, 45);
-} */
-
 .tabcontent {
     grid-column-start: 2;
     grid-column-end: 4;
@@ -400,7 +355,7 @@ h5 {
 #price-img {
     margin-top: 30px;
     width: 50%;
-    border-radius: 7px;
+    border-radius: 5px;
 }
 
 .main-picture {
@@ -470,6 +425,12 @@ a {
 /* -----------------Responsive----------------- */
 
 @media only screen and (max-width: 1000px) {
+    .main-picture img {
+        width: 26vw;
+        margin-left: 170px;
+        margin-top: -80%;
+        margin-bottom: 15px;
+    }
     h5 {
         margin-top: 10px;
         margin-bottom: -5px;
@@ -501,6 +462,12 @@ a {
 }
 
 @media only screen and (max-width: 830px) {
+    .main-picture img {
+        width: 26vw;
+        margin-left: 170px;
+        margin-top: -80%;
+        margin-bottom: 15px;
+    }
     h4 {
         font-size: 16px;
     }
@@ -589,6 +556,9 @@ a {
 /* ---------------Mobile Version------------- */
 
 @media only screen and (max-width: 600px) {
+    .main-picture img {
+        display: none;
+    }
     .topnav {
         margin-top: -13%;
     }
