--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -323,7 +323,7 @@ body {
     background-color: white;
     width: 80%;
     border-left: none;
-    height: 740px;
+    height: 760px;
     border-radius: 7px;
 }
 
@@ -347,8 +347,6 @@ hr {
 }
 
 h5 {
-    margin-top: 70px;
-    margin-bottom: -30px;
     font-size: 15px;
 }
 
@@ -358,6 +356,21 @@ h5 {
     border-radius: 5px;
 }
 
+#price-img1 {
+    margin-top: 30px;
+    margin-left: 20px;
+    width: 40%;
+    border-radius: 5px;
+}
+
+/* .info-aside {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
+ */
+
 .main-picture {
     grid-column-start: 1;
     grid-column-end: 2;
@@ -366,9 +379,9 @@ h5 {
 }
 
 .main-picture img {
-    width: 20vw;
-    margin-left: 170px;
-    margin-top: -80%;
+    width: 23vw;
+    margin-left: 140px;
+    margin-top: -50%;
     margin-bottom: 15px;
 }
 
