--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -221,35 +221,26 @@ h1 {
         transform: translateY(-15px);
     }
 }
+/* ----------------------- University headline + selector -------------------------- */
 
-/* ----------------------- University grid -------------------------- */
-
-
-.avaiablecontainer {
+.unitopcontainer {
     display: grid;
     font-size: 120%;
-    margin-left: 2.5vw;
-    margin-right: 2.5vw;
     border-collapse: collapse;
-    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 2.5vh;
+    margin-bottom: 2.5vh;
+    grid-template-columns: 1fr;
     grid-template-rows: auto;
-    grid-column-gap: 5vw;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     justify-items: center;
     grid-template-areas:
-    'uniheadline uniheadline uniheadline'
-    'universities universities universities'
-    'programcontainer programinfocontainer programinfocontainer'
-    'studentlife studentlife studentlife';
-    
+    'uniheadline'
+    'universities';
 }
 
 .uniheadline { grid-area: uniheadline; }
 .universities { grid-area: universities; }
-.programcontainer { grid-area: programcontainer; }
-.programinfocontainer { grid-area: programinfocontainer; }
-.studentlife { grid-area: studentlife; }
 
 
 .uniheadline {
@@ -260,20 +251,75 @@ h1 {
 .universities {
     display: grid;
     grid-template-columns: repeat(5, 12.5vw);
-    grid-template-rows: auto auto 5vh;
+    grid-template-rows: auto;
     margin-top: 2.5vh;
+    margin-bottom: 2.5vh;
     place-self: center;
+    
 }
+
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+  }
+
+.universities button {
+    margin: auto;
+    padding: 0;
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 12.5% 15%;
+    transition: 0.2s;
+    font-size: 17px;
+    
+  }
+
 .universities img {
     height: 7vw;
     transition: transform .2s;
     place-self: center;
 }
+
 .universities img:hover {
-    transform: scale(1.3);
-    border: 2px solid black;
-    padding: 2.5%;
+    transform: scale(1.25);
 }
+
+
+.tablinks.active {
+    transform: scale(1.5);
+}
+
+
+/* ----------------------- University contents -------------------------- */
+
+
+.unicontainer {
+    display: grid;
+    font-size: 120%;
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
+    border-collapse: collapse;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-column-gap: 1.5vw;
+    justify-content: center;
+    align-items: start;
+    justify-items: center;
+    grid-template-areas:
+    'programcontainer programinfocontainer programinfocontainer'
+    'studentlife studentlife studentlife';
+    
+}
+
+.programcontainer { grid-area: programcontainer; }
+.programinfocontainer { grid-area: programinfocontainer; }
+.studentlife { grid-area: studentlife; }
+
 
 /* ----------------------- Program container -------------------------- */
 
