--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -363,6 +363,19 @@ h5 {
     border-radius: 5px;
 }
 
+#price-img2 {
+    margin-top: 30px;
+    width: 100%;
+    border-radius: 5px;
+}
+
+#price-img3 {
+    margin-top: 30px;
+    margin-left: 20px;
+    width: 40%;
+    border-radius: 5px;
+}
+
 /* .info-aside {
     grid-column-start: 2;
     grid-column-end: 4;
