--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -84,7 +84,7 @@ body {
     border-radius: 10px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 600px) {
     .navbar {
         flex-direction: column;
         align-items: flex-start;
@@ -276,8 +276,29 @@ body {
     width: 100%;
     margin-top: 5%;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.1fr 0.1fr;
+    grid-template-rows: 0.1fr 0.1fr 0.1fr 0.1fr 0.1fr;
     column-gap: 2rem;
+}
+
+.responsive-content {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.responsive-img {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+.responsive-h5-button {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
 
 .tab {
@@ -323,7 +344,7 @@ body {
     grid-column-start: 2;
     grid-column-end: 4;
     grid-row-start: 1;
-    grid-row-end: 1;
+    grid-row-end: 3;
     margin-left: 80px;
     margin-top: 10px;
     float: left;
@@ -404,19 +425,11 @@ h5 {
     margin-left: 20px;
 }
 
-/* .info-aside {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 2;
-}
- */
-
 .main-picture {
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 2;
+    grid-row-start: 6;
+    grid-row-end: 7;
 }
 
 .main-picture img {
@@ -425,10 +438,6 @@ h5 {
     margin-top: -80%;
     margin-bottom: 15px;
 }
-
-/* #info {
-    margin-left: 250px;
-} */
 
 /* --------------footer---------------- */
 
@@ -472,7 +481,7 @@ footer {
     position: relative;
     font-size: 150%;
     float: left;
-    margin-top: -8%;
+    margin-top: -10%;
     margin-left: 20px;
 }
 
@@ -482,53 +491,31 @@ a {
 
 /* -----------------Responsive----------------- */
 
-@media only screen and (max-width: 1250px) {
-    .tabcontent {
-        width: 85%;
-        border-left: none;
-        height: 950px;
-        border-radius: 7px;
-    }
-}
-
-@media only screen and (max-width: 1230px) {
-    .tab {
-        width: 65%;
-        height: 720px;
-        border-radius: 7px;
-    }
-}
-
 @media only screen and (max-width: 1024px) {
-    .main-picture img {
-        margin-left: 170px;
-        margin-top: -80%;
-    }
     .tabcontent {
         width: 90%;
-        margin-left: 30%;
-        height: 1600px;
+        height: 990px;
+        margin-left: 40px;
+    }
+    footer {
+        margin-top: 15%;
     }
     .tab {
-        width: 65%;
-        height: 830px;
-        border-radius: 7px;
-        margin-left: 130px;
+        height: 710px;
+        margin-left: 110px;
     }
-    p {
-        font-size: 15px;
-    }
-    h5 {
-        margin-top: 10px;
-        margin-bottom: -5px;
-    }
-    .tabcontent {
-        margin-left: 60px;
-        height: 730px;
+    .main-picture img {
+        width: 30vw;
+        margin-left: 140px;
+        margin-top: -120%;
+        margin-bottom: 30px;
     }
 }
 
 @media only screen and (max-width: 960px) {
+    .navbar-links li a {
+        font-size: 1.7vw;
+    }
     .service-tab {
         margin-left: -40px;
     }
@@ -549,11 +536,14 @@ a {
 }
 
 @media only screen and (max-width: 830px) {
+    .navbar-links li a {
+        font-size: 1.7vw;
+    }
     .main-picture img {
-        width: 26vw;
-        margin-left: 170px;
-        margin-top: -80%;
-        margin-bottom: 15px;
+        width: 30vw;
+        margin-left: 140px;
+        margin-top: -100%;
+        margin-bottom: 90px;
     }
     h4 {
         font-size: 16px;
@@ -564,7 +554,10 @@ a {
     .tabcontent {
         margin-left: 40px;
         width: 95%;
-        height: 690px;
+        height: 870px;
+    }
+    .tabcontent p {
+        font-size: 14px;
     }
     .arrow {
         margin-top: -6%;
@@ -573,11 +566,11 @@ a {
     }
     .tab {
         width: 70%;
-        height: 600px;
+        height: 670px;
     }
     .service-tab i {
         font-size: 130%;
-        margin-top: -13%;
+        margin-top: -15%;
         margin-left: 20px;
     }
     .tab button {
@@ -590,21 +583,40 @@ a {
         font-size: 16px;
         margin-top: 20px;
     }
+    h5 {
+        margin-top: 20px;
+        margin-bottom: -2px;
+        font-size: 14px;
+    }
+    .service-intro {
+        margin-top: 15%;
+        margin-left: 40%;
+    }
+    .contact-button {
+        margin-top: 20px;
+    }
     @media only screen and (max-width: 715px) {
+        footer {
+            margin-top: 0px;
+            font-size: 1.5vw;
+        }
+        .footer-content {
+            width: 75%;
+        }
         .service-tab {
             margin-left: -80px;
         }
         .tab {
             width: 65%;
-            height: 580px;
+            height: 710px;
         }
         .tabcontent {
-            margin-left: 30px;
-            width: 100%;
-            height: 690px;
+            margin-left: 10px;
+            width: 115%;
+            height: 870px;
         }
         p {
-            font-size: 13px;
+            font-size: 12px;
         }
         h3 {
             font-size: 16px;
@@ -613,59 +625,76 @@ a {
         .topnav {
             margin-top: -7%;
         }
-        .topnav a {
-            margin-top: 15px;
-            padding: 10px 19px;
-            text-decoration: none;
-            font-size: 14px;
-            padding-right: 20px;
-        }
         #logo {
             width: 35px;
             margin-top: 15px;
+        }
+        .navbar-links li a {
+            font-size: 2vw;
+        }
+        .grid-service-intro {
+            margin-top: 10%;
         }
     }
     @media only screen and (max-width: 670px) {
         .tab {
             width: 60%;
-            height: 610px;
+            height: 770px;
         }
         .tabcontent {
-            margin-left: -10px;
+            margin-left: -30px;
             width: 130%;
-            height: 720px;
+            height: 870px;
+        }
+        .grid-service-intro {
+            margin-top: 12%;
+        }
+        .main-picture img {
+            width: 30vw;
+            margin-left: 120px;
+            margin-top: -100%;
+            margin-bottom: 190px;
         }
     }
     /* ---------------Mobile Version------------- */
     @media only screen and (max-width: 600px) {
+        footer {
+            margin-top: 0px;
+            font-size: 2.3vw;
+        }
+        .footer-content {
+            width: 100%;
+        }
         .main-picture img {
             display: none;
-        }
-        .topnav {
-            margin-top: -13%;
         }
         h4 {
             font-size: 13px;
         }
         .grid-service-intro {
             display: grid;
-            margin-top: 60px;
+            margin-top: 20px;
             width: 100%;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 0.1fr;
+            margin-top: 15%;
         }
         .service-intro {
             width: 70%;
             height: 40vh;
-            margin-top: 15%;
-            margin-bottom: -15%;
+            margin-top: -2%;
+            margin-bottom: -10%;
             margin-left: 20%;
             font-size: 1.3vw;
         }
         .buttonStyle1 {
-            width: 80px;
-            height: 20px;
+            width: 90px;
+            height: 30px;
             font-size: 13px;
+        }
+        .buttonStyle1 i {
+            font-size: 2vw;
+            padding-right: 0.40vw;
         }
         .service-intro-img {
             display: none;
@@ -688,7 +717,7 @@ a {
             width: 100%;
             margin-top: 10%;
             grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 0.1fr 0.1fr;
+            grid-template-rows: 0.1fr 0.1fr 0.1fr;
             column-gap: 1rem;
         }
         .tab {
@@ -700,8 +729,9 @@ a {
             display: block;
             background-color: white;
             width: 65%;
-            height: 260px;
+            height: 320px;
             border-radius: 7px;
+            margin-left: 30%;
         }
         .tab button {
             color: black;
@@ -710,6 +740,9 @@ a {
         }
         hr {
             display: none;
+        }
+        .arrow {
+            margin-top: 4%;
         }
         .service-tab i {
             position: relative;
@@ -723,27 +756,22 @@ a {
             grid-column-end: 4;
             grid-row-start: 2;
             grid-row-end: 2;
-            margin-left: 120px;
+            margin-left: 25%;
             margin-top: 80px;
             float: left;
             padding: 0px 12px;
             background-color: white;
             width: 80%;
             border-left: none;
-            height: 500px;
+            height: 850px;
             border-radius: 7px;
+            font-size: 12px;
         }
-        /*   .left-div {
-        visibility: visible;
-        width: 50%;
-        float: left;
-    }
-    .right-div {
-        visibility: visible;
-        margin-left: 50%;
-    } */
     }
     @media only screen and (max-width: 460px) {
+        .navbar-links li a {
+            font-size: 3vw;
+        }
         .tabcontent {
             margin-top: 40px;
         }
@@ -784,20 +812,40 @@ a {
             width: 20px;
             height: 20px;
         }
-    }
-    @media only screen and (max-width: 460px) {
-        .topnav {
-            margin-top: -16%;
+        .grid-service-intro {
+            margin-top: 18%;
         }
     }
-    @media only screen and (max-width: 360px) {
-        .topnav {
-            margin-top: -20%;
+    @media only screen and (max-width: 376px) {
+        .navbar-links li a {
+            font-size: 2.9vw;
         }
-    }
-    @media only screen and (max-width: 321px) {
+        .grid-service-intro {
+            margin-top: 23%;
+        }
+        .service-intro {
+            width: 85%;
+            margin-top: 14%;
+            margin-bottom: 10%;
+            font-size: 1.2vw;
+        }
+        .tab {
+            width: 65%;
+            height: 360px;
+            border-radius: 7px;
+            margin-left: 40%;
+        }
         .tabcontent {
-            margin-top: 100px;
+            margin-top: 90px;
+            margin-left: 33%;
+        }
+    }
+    @media only screen and (max-width: 320px) {
+        .navbar-links li a {
+            font-size: 2.9vw;
+        }
+        .tabcontent {
+            margin-top: 70px;
             margin-bottom: 20px;
         }
         .arrow {
@@ -808,6 +856,15 @@ a {
             font-size: 80%;
             margin-top: -11%;
             margin-left: 20px;
+        }
+        .tab {
+            width: 65%;
+            height: 380px;
+            margin-right: -25px;
+        }
+        .buttonStyle1 i {
+            font-size: 3vw;
+            padding-right: 0.40vw;
         }
     }
 }
