--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -183,6 +183,19 @@ body {
 
 /*   .......................... Contact us page intro ..........................  */
 
+
+.grid-contact-intro{
+  display: grid;
+  width: 100%;
+  margin-top: 5%;
+  background-image: url("../images/ESS-BG.png");
+  background-repeat: no-repeat;;
+  background-size: 95%;
+  background-position: top;
+  grid-template-rows: 1fr;
+  grid-template-columns:  1fr 1fr;
+}  
+
   .contact-intro h3{
     color: #203F7E;
   }
