--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -184,31 +184,31 @@ body {
 
 /*   .......................... Contact us page intro ..........................  */
 
-
-.grid-contact-intro{
+.grid-contact-intro {
   display: grid;
   width: 100%;
   margin-top: 5%;
   background-image: url("../images/ESS-BG.png");
-  background-repeat: no-repeat;;
+  background-repeat: no-repeat;
+  ;
   background-size: 95%;
   background-position: top;
   grid-template-rows: 1fr;
-  grid-template-columns:  1fr 1fr;
-}  
+  grid-template-columns: 1fr 1fr;
+}
 
-  .contact-intro h3{
-    color: #203F7E;
-  }
+.contact-intro h3 {
+  color: #203F7E;
+}
 
-  .contact-intro-img img{
-    width: 30vw;
-    margin-left: 15%;
-    margin-top: 26%;
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 1;
+.contact-intro-img img {
+  width: 30vw;
+  margin-left: 15%;
+  margin-top: 26%;
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 1;
 }
 
 .contact-intro {
@@ -252,7 +252,7 @@ body {
 .contact-info-img img {
   width: 22vw;
   margin-left: 30%;
-  margin-top: 5%;
+  margin-top: 18%;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
@@ -276,8 +276,8 @@ body {
 .team h3 {
   color: #203F7E;
   margin-top: 7%;
-  font-size: 1.4vw;
-  margin-left: 15%;
+  font-size: 1.6vw;
+  margin-left: 25%;
 }
 
 .cards {
@@ -372,12 +372,12 @@ body {
   cursor: pointer;
 }
 
-.contact form button:hover{
+.contact form button:hover {
   background: #db8120;
   width: 10vw;
   border: 0;
   color: #ffffff;
-  font-weight:normal;
+  font-weight: normal;
   cursor: pointer;
 }
 
@@ -467,7 +467,7 @@ footer {
   }
   .contact-info-img img {
     width: 35vw;
-    margin-top: 10%;
+    margin-top: 5%;
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 1;
