Images Fixed + Linked

--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -581,8 +581,8 @@ h1 {
 }
 
 .studentlife img {
-    width: 100%;
-    height: auto;
+    width: 20vw;
+    height: 20vh;
 }
 
 /* ----------------------- Footer -------------------------- */
