--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -16,142 +16,8 @@ body {
     background-color: #EBF3FA;
 }
 
-/* navigation */
 
-.navbar {
-    display: flex;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: auto;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #EBF3FA;
-    box-shadow: 5px 2px 6px #888888a6;
-    z-index: 6;
-}
-
-.logo {
-    float: left;
-    margin-left: 3%;
-    display: flex;
-    align-items: center;
-    padding: 10px;
-}
-
-.logo img {
-    width: 3.7vw;
-    height: auto;
-}
-
-.navbar-links {
-    height: 100%;
-    margin-right: 3%;
-}
-
-.navbar-links ul {
-    display: flex;
-}
-
-.navbar-links li {
-    list-style: none;
-}
-
-.navbar-links li a {
-    display: block;
-    text-decoration: none;
-    font-size: 1.2vw;
-    color: #F1A34F;
-    padding-right: 25px;
-    padding-left: 25px;
-}
-
-.toggle-button {
-    position: absolute;
-    right: 1rem;
-    top: 1.5rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
-}
-
-.toggle-button .bar {
-    height: 3px;
-    width: 100%;
-    background-color: #F1A34F;
-    border-radius: 10px;
-}
-
-@media (max-width: 600px) {
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    .logo img {
-        width: 7vw;
-        height: auto;
-    }
-    .toggle-button {
-        display: flex;
-    }
-    .navbar-links {
-        display: none;
-        width: 100%;
-        background-color: #203F7E;
-    }
-    .navbar-links ul {
-        width: 100%;
-        flex-direction: column;
-    }
-    .navbar-links ul li {
-        text-align: center;
-    }
-    .navbar-links.active {
-        display: flex;
-    }
-    .navbar-links li a {
-        font-size: 3vw;
-        color: #F1A34F;
-        padding: 15px;
-    }
-    .buttonStyle1 {
-        font-size: 3vw;
-    }
-    .buttonStyle1 i {
-        font-size: 3vw;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .logo img {
-        width: 10vw;
-        height: auto;
-        margin-top: 10px;
-    }
-    /*  .toggle-button {
-        top: 1rem;
-    } */
-    .buttonStyle1 {
-        font-size: 1.4vw;
-        background-color: #F1A34F;
-        height: 100px;
-        color: #ffffff;
-        border: none;
-        padding: 5px;
-        cursor: pointer;
-        border-radius: 7px;
-        box-shadow: 0 5px rgba(48, 48, 48, 0.23);
-        outline: none;
-    }
-    .buttonStyle1 i {
-        font-size: 3vw;
-        padding-right: 0.5vw;
-    }
-}
-
-/*----------------- Contact Us btn -----------------*/
+/*   .......................... Contact us btn ..........................  */
 
 .buttonStyle1 {
     font-size: 1vw;
@@ -164,27 +30,206 @@ body {
     box-shadow: 0 5px rgba(48, 48, 48, 0.23);
     outline: none;
     margin-left: 20px;
-}
-
-.buttonStyle1 i {
+  }
+  
+  .buttonStyle1 i {
     font-size: 1vw;
     padding-right: 0.20vw;
-}
-
-.buttonStyle1:active {
+  }
+  
+  .buttonStyle1:active {
     box-shadow: 0 2px white;
     transform: translateY(4px);
     outline: none;
-}
-
-.buttonStyle1:hover {
+  }
+  
+  .buttonStyle1:hover {
     outline: none;
-}
-
-.contact-button {
+  }
+  
+  .contact-button {
     margin-top: 50px;
-}
-
+  }
+  
+  .buttonStyle2 {
+    font-size: 1vw;
+    background-color: #F1A34F;
+    color: #ffffff;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 7px;
+    box-shadow: 0 5px rgba(48, 48, 48, 0.23);
+    outline: none;
+  }
+  
+  .buttonStyle2 i {
+    font-size: 1vw;
+    padding-right: 0.5vw;
+  }
+  
+  .buttonStyle2:active {
+    box-shadow: 0 2px white;
+    transform: translateY(4px);
+    outline: none;
+  }
+  
+  .buttonStyle2:hover {
+    outline: none;
+  }
+  
+  .contact-button {
+    margin-top: 50px;
+  }
+  
+  /*   .......................... nav-bar ..........................  */
+  
+  .navbar {
+    display: flex;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: auto;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #EBF3FA;
+    box-shadow: 5px 2px 6px #888888a6;
+    z-index: 6;
+  }
+  
+  .logo {
+    float: left;
+    margin-left: 3%;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+  }
+  
+  .logo img {
+    width: 3.7vw;
+    height: auto;
+  }
+  
+  .navbar-links {
+    height: 100%;
+    margin-right: 3%;
+  }
+  
+  .navbar-links ul {
+    display: flex;
+  }
+  
+  .navbar-links li {
+    list-style: none;
+  }
+  
+  .navbar-links li a {
+    display: block;
+    text-decoration: none;
+    font-size: 1.2vw;
+    color: #F1A34F;
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+  
+  .toggle-button {
+    position: absolute;
+    right: 1rem;
+    top: 1.5rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+  }
+  
+  .toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: #F1A34F;
+    border-radius: 10px;
+  }
+  
+  @media (max-width: 800px) {
+    .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .logo img {
+      width: 7vw;
+      height: auto;
+    }
+    .toggle-button {
+      display: flex;
+    }
+    .navbar-links {
+      display: none;
+      width: 100%;
+      background-color: #203F7E;
+    }
+    .navbar-links ul {
+      width: 100%;
+      flex-direction: column;
+    }
+    .navbar-links ul li {
+      text-align: center;
+    }
+    .navbar-links.active {
+      display: flex;
+    }
+    .navbar-links li a {
+      font-size: 3vw;
+      color: #F1A34F;
+      padding: 15px;
+    }
+    .buttonStyle2 {
+      margin-left: auto;
+      margin-right: auto;
+      width: 16vw;
+      font-size: 2vw;
+    }
+    
+    .buttonStyle2 i {
+      font-size: 2vw;
+      padding-right: 0.5vw;
+    } 
+    
+    .buttonStyle1 {
+      font-size: 2vw;
+    }
+    
+    .buttonStyle1 i {
+      font-size: 2vw;
+    }
+    
+    
+    .topnav {
+      margin-top: -8%;
+    }
+  
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .logo img {
+      width: 10vw;
+      height: auto;
+    }
+    .toggle-button {
+      top: 1rem;
+    }
+       
+    .buttonStyle1 {
+      font-size: 2vw;
+    }
+    
+    .buttonStyle1 i {
+      font-size: 2vw;
+    }
+    
+    .topnav {
+      margin-top: -13%;
+    }
+  }
 /* ------------------Arrow style------------- */
 
 .arrow {
@@ -507,9 +552,9 @@ a {
 }
 
 @media only screen and (max-width: 960px) {
-    .navbar-links li a {
+    /* .navbar-links li a {
         font-size: 1.7vw;
-    }
+    } */
     .service-tab {
         margin-left: -40px;
     }
@@ -530,9 +575,10 @@ a {
 }
 
 @media only screen and (max-width: 830px) {
-    .navbar-links li a {
+    
+    /* .navbar-links li a {
         font-size: 1.7vw;
-    }
+    } */
     .main-picture img {
         width: 30vw;
         margin-left: 140px;
@@ -586,10 +632,11 @@ a {
         margin-top: 15%;
         margin-left: 40%;
     }
-    .contact-button {
+    /* .contact-button {
         margin-top: 20px;
-    }
+    } */
     @media only screen and (max-width: 715px) {
+        
         footer {
             margin-top: 0px;
             font-size: 1.5vw;
@@ -616,7 +663,7 @@ a {
             font-size: 16px;
             margin-top: 20px;
         }
-        .topnav {
+        /* .topnav {
             margin-top: -7%;
         }
         #logo {
@@ -625,7 +672,7 @@ a {
         }
         .navbar-links li a {
             font-size: 2vw;
-        }
+        } */
         .grid-service-intro {
             margin-top: 10%;
         }
@@ -681,7 +728,7 @@ a {
             margin-left: 20%;
             font-size: 1.3vw;
         }
-        .buttonStyle1 {
+        /* .buttonStyle1 {
             width: 90px;
             height: 30px;
             font-size: 13px;
@@ -689,7 +736,7 @@ a {
         .buttonStyle1 i {
             font-size: 2vw;
             padding-right: 0.40vw;
-        }
+        } */
         .service-intro-img {
             display: none;
         }
@@ -763,15 +810,15 @@ a {
         }
     }
     @media only screen and (max-width: 460px) {
-        .navbar-links li a {
+        /* .navbar-links li a {
             font-size: 3vw;
-        }
+        } */
         .tabcontent {
             margin-top: 40px;
         }
-        .topnav {
+        /* .topnav {
             margin-top: -13%;
-        }
+        } */
         h4 {
             font-size: 10px;
         }
@@ -811,9 +858,9 @@ a {
         }
     }
     @media only screen and (max-width: 376px) {
-        .navbar-links li a {
+        /* .navbar-links li a {
             font-size: 2.9vw;
-        }
+        } */
         .grid-service-intro {
             margin-top: 23%;
         }
@@ -835,9 +882,9 @@ a {
         }
     }
     @media only screen and (max-width: 320px) {
-        .navbar-links li a {
+        /* .navbar-links li a {
             font-size: 2.9vw;
-        }
+        } */
         .tabcontent {
             margin-top: 70px;
             margin-bottom: 20px;
@@ -856,9 +903,9 @@ a {
             height: 380px;
             margin-right: -25px;
         }
-        .buttonStyle1 i {
+        /* .buttonStyle1 i {
             font-size: 3vw;
             padding-right: 0.40vw;
-        }
+        } */
     }
 }
