--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -625,6 +625,9 @@ footer{
      margin-top: 3%;
      text-align: center;
    }
+   a {
+    color: white;
+}
 
 
    /* -------------------------------responsiveness--------------------------------------- */
