--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -521,6 +521,10 @@ footer {
   text-align: center;
 }
 
+a {
+  color: white;
+}
+
 /*   .......................... RESPONSIVE  ..........................  */
 
 /*   ..........................  For tablet ..........................  */
