--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -96,51 +96,70 @@ h1, h2, h3 {
 /*   .......................... Contact Us Button ..........................  */
  
 
-.buttonStyle1-act {
-    background-color: #F1A34F;
-    color: #FFFFFF;
-    border: none;
-    cursor: pointer;
-    border-radius: 7px;
-    box-shadow: 0 5px rgba(48, 48, 48, 0.23);
-    outline: none;
-    padding-right: 0.5vw;
-    padding-left: 0.5vw;
-}
-
-
-.buttonStyle1-act i {
-    padding-right: 0.5vw;
-}
-
 .buttonStyle1 {
+    font-size: 1vw;
     background-color: #F1A34F;
     color: #ffffff;
     border: none;
-    padding-bottom: 15px 5px;
+    padding: 5px;
     cursor: pointer;
     border-radius: 7px;
     box-shadow: 0 5px rgba(48, 48, 48, 0.23);
     outline: none;
-}
-
-.buttonStyle1 i {
-    padding-right: 0.5vw;
-}
-
-.buttonStyle1:active {
+    margin-left: 20px;
+  }
+  
+  .buttonStyle1 i {
+    font-size: 1vw;
+    padding-right: 0.20vw;
+  }
+  
+  .buttonStyle1:active {
     box-shadow: 0 2px white;
     transform: translateY(4px);
     outline: none;
-}
-
-.buttonStyle1:hover {
+  }
+  
+  .buttonStyle1:hover {
     outline: none;
-}
-
-.contact-button {
-    margin-top: 7%;
-}
+  }
+  
+  .contact-button {
+    margin-top: 50px;
+  }
+  
+  .buttonStyle2 {
+    font-size: 21px;
+    background-color: #F1A34F;
+    color: #ffffff;
+    border: none;
+    padding: 2.5%;
+    padding-left: 2.5vw;
+    padding-right: 2.5vw;
+    cursor: pointer;
+    border-radius: 7px;
+    box-shadow: 0 5px rgba(48, 48, 48, 0.23);
+    outline: none;
+  }
+  
+  .buttonStyle2 i {
+    font-size: 24p;
+    padding-right: 2.5vw;
+  }
+  
+  .buttonStyle2:active {
+    box-shadow: 0 2px white;
+    transform: translateY(4px);
+    outline: none;
+  }
+  
+  .buttonStyle2:hover {
+    outline: none;
+  }
+  
+  .contact-button {
+    margin-top: 50px;
+  }
 
 /* ----------------------- Intro content -------------------------- */
 
@@ -169,9 +188,10 @@ h1, h2, h3 {
     border-collapse: collapse;
     justify-content: center;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 0.2fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas:
     'introtext introimage'
+    'arrow arrow'
 }
 
 .introtext { grid-area: introtext; }
@@ -199,10 +219,6 @@ h1 {
 
 /* ----------------------- Arrow -------------------------- */
 .arrow {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 2;
     margin-right: auto;
     margin-left: auto;
     margin-top: 1%;
@@ -231,6 +247,8 @@ h1 {
 
 .unitopcontainer {
     display: grid;
+    max-width: 100%;
+    height: auto;
     font-size: 120%;
     border-collapse: collapse;
     margin-top: 2.5vh;
@@ -264,12 +282,6 @@ h1 {
     
 }
 
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-  }
 
 .universities button {
     margin: auto;
@@ -286,7 +298,7 @@ h1 {
   }
 
 .universities img {
-    height: 7vw;
+    height: 10vh;
     transition: transform .2s;
     place-self: center;
 }
@@ -306,6 +318,7 @@ h1 {
 
 .unicontainer {
     display: grid;
+    max-width: 100%;
     font-size: 120%;
     margin-left: 2.5vw;
     margin-right: 2.5vw;
@@ -656,3 +669,208 @@ footer {
      margin-top: 3%;
      text-align: center;
    }
+
+   /* ----------------------- Responsiveness -------------------------- */
+   
+   @media only screen and (max-width: 660px) {
+    
+    .buttonStyle1 {
+        width: 16vw;
+        height: 5vw;
+        font-size: 2vw;
+    }    
+
+    .introgrid {
+        position: absolute;
+        display: grid;
+        width: 100%;
+        height: auto;
+        border-collapse: collapse;
+        justify-content: center;
+        border-collapse: collapse;
+        justify-content: center;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+        'introtext introimage'
+        'arrow arrow'
+    }
+
+
+    .introtext {
+        width: 100%;
+        margin-left: 7.5vw;
+        margin-top: 5vh;
+        font-size: 18px;
+        color: #434343;
+    }
+    
+    h1 {
+        color:#F1A34F;
+        font-size: 28px;
+    }
+    
+    .introimage img {
+        width: 80%;
+    }
+
+
+    .universities {
+        grid-template-columns: repeat(5, 1fr);
+        margin-left: 0;
+        margin-right: 0; 
+    }
+
+
+    .universities img {
+        height: 6vh;
+        transition: transform .2s;
+        place-self: center;
+    }
+        
+    
+    .tablinks.active {
+        transform: scale(1.25);
+    }
+    
+    .unitopcontainer {
+        display: grid;
+        max-width: 100%;
+        overflow: hidden;
+        font-size: 120%;
+        margin-left: 0;
+        margin-right: 0;
+        border-collapse: collapse;
+        margin-top: 5vh;
+        margin-bottom: 2.5vh;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        justify-content: center;
+        align-items: center;
+        justify-items: center;
+        grid-template-areas:
+        'uniheadline'
+        'universities';
+    }
+
+
+    .unicontainer {
+        display: grid;
+        max-width: 100%;
+        overflow: hidden;
+        font-size: 120%;
+        border-collapse: collapse;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-row-gap: 2.5vh;
+        justify-content: center;
+        align-items: start;
+        justify-items: center;
+        grid-template-areas:
+        'programcontainer'
+        'programinfocontainer'
+        'studentlife';        
+    }
+    
+
+    .programinfo {
+        display: grid;
+        margin-left: 2.5vw;
+        margin-right: 2.5vw;
+        padding-top: 2.5vh;
+        padding-bottom: 2.5vh;
+        border-collapse: collapse;
+        grid-row-gap: 50px;
+        grid-column-gap: 50px;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        justify-content: center;
+        justify-items: center;
+        grid-template-areas:
+        'admissionvideo'
+        'admissiontext'
+        'countryimage'
+        'countrytext';
+    }
+ 
+    .programinfocontainer {
+        margin: 0;
+    }
+
+        .mapcontainer {
+            display: grid;
+            width: 100%;
+            height: auto;
+            background-color: white;
+            border-collapse: collapse;
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+            grid-column-gap: 50px;
+            justify-content: center;
+            align-items: center;
+            justify-items: center;
+            grid-template-areas:
+            'map'
+            'maptext';
+        }
+        
+        .studentlife {
+            display: grid;
+            width: 75%;
+            height: auto;
+            border-collapse: collapse;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto;
+            justify-content: center;
+            align-items: center;
+            justify-items: center;
+            grid-template-areas:
+            'studentheadline studentheadline'
+            'image1 image2'
+            'image3 image4'
+            'image5 image6';
+        }
+                
+        .studentheadline {
+            margin-top: 2.5vh;
+            place-self: center;
+            color: #203F7E;
+        }
+        
+        .studentlife img {
+            width: 40vw;
+            height: 30vw;
+        }     
+        
+        .admissionvideo {
+            width: 100%;
+            height: 30vh;
+            position: relative;
+        
+        }
+        .admissionvideo iframe {
+            width: 100%;
+            height: 100%;
+            top:0;
+            left: 0;
+            position: absolute;
+        }        
+
+        .countryimage {
+            width: 100%;
+            height: auto;
+        }
+        .countryimage img {
+            width: 100%;
+            height: 30vh;
+            top:0;
+            left: 0;
+        }        
+
+        .maptext {
+            margin-top: 2.5vh;
+            margin-bottom: 2.5vh;
+        }
+   @media only screen and (max-width: 1000px) {
+
+}
