--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -466,7 +466,9 @@ body {
     margin-top: 50px;
     place-self: center;
 }
-
+.uni_logo {
+    grid-row: 2;
+}
 .headline_uni {
     font-size: 1vw;
     grid-column-start: 2;
@@ -475,7 +477,6 @@ body {
     margin-bottom: 7%;
     color: #203F7E;
 }
-
 .universities img {
     height: 7vw;
     grid-row: 2;
@@ -487,7 +488,7 @@ body {
     transform: scale(1.3);
 }
 
-.universities a {
+.uni_button {
     grid-row: 3;
     grid-column-start: 3;
     place-self: center;
