--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ body {
     float: left;
     display: block;
 }
+
 .logo {
     float: left;
 }
@@ -105,13 +106,15 @@ body {
 }
 
 /*---------------------------- main page ------------------- */
-.landing-img-grid{
+
+.landing-img-grid {
     display: grid;
     box-sizing: border-box;
     grid-template-columns: 55% 45%;
     grid-template-rows: 30% 15% 10%;
     column-gap: 2rem;
 }
+
 #mainimg {
     width: 100%;
     height: 100%;
@@ -122,9 +125,11 @@ body {
     z-index: -1;
     justify-self: stretch;
 }
+
 .scroll {
     position: relative;
 }
+
 #car {
     width: 10%;
     grid-row-start: 2;
@@ -133,6 +138,7 @@ body {
     position: fixed;
     z-index: -2;
 }
+
 #plane {
     width: 7%;
     grid-row-start: 2;
@@ -141,9 +147,11 @@ body {
     position: fixed;
     display: none;
 }
+
 #plane:active {
     display: block;
 }
+
 .landing-headline {
     font-size: 14px;
     color: #203F7E;
@@ -153,6 +161,7 @@ body {
     grid-row-start: 1;
     align-self: end;
 }
+
 .landing-headline-paragraph {
     text-align: left;
     grid-column-start: 2;
@@ -160,6 +169,7 @@ body {
     grid-row-start: 2;
     grid-row-end: 3;
 }
+
 .landing-contact-button {
     text-align: left;
     grid-column-start: 2;
@@ -167,6 +177,7 @@ body {
     grid-row-start: 3;
     grid-row-end: 3;
 }
+
 .landing-arrow {
     display: block;
     margin-left: auto;
@@ -191,14 +202,16 @@ body {
     margin-left: auto;
     margin-right: auto;
     grid-column-start: 1;
-    grid-column-end:3 ;
+    grid-column-end: 3;
     color: #203F7E;
 }
+
 .chooseus p {
     grid-column: 1;
     grid-row: 2;
     margin-left: 25%
 }
+
 .points {
     grid-row: 2;
     margin-left: 100px;
@@ -206,10 +219,12 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 80px 80px 80px 80px 80px;
 }
-.points img{
+
+.points img {
     width: 60px;
     grid-column: 1;
 }
+
 .points p {
     position: relative;
     margin-top: -60px;
@@ -223,6 +238,7 @@ body {
     grid-template-columns: 55vw 45vw;
     width: 100vw;
 }
+
 #airport {
     grid-column: 1;
     grid-row: 1;
@@ -232,25 +248,29 @@ body {
     margin-top: 50px;
     z-index: 10;
 }
+
 .showcase {
     grid-column-start: 2;
     width: 35vw;
     float: right;
     place-self: center;
 }
+
 .steps {
     grid-column: 1;
     display: grid;
     grid-template-columns: 10% 90%;
-    grid-template-rows: repeat(8,80px);
+    grid-template-rows: repeat(8, 80px);
     width: 30vw;
     place-self: center;
 }
-.steps img{
+
+.steps img {
     width: 60%;
     grid-column: 1;
     align-self: center;
 }
+
 .steps p {
     grid-column: 2;
     align-self: center;
@@ -262,20 +282,24 @@ body {
     grid-template-columns: 55vw 45vw;
     grid-template-rows: 50px 40vh;
 }
+
 .comparison img {
     width: 30vw;
     place-self: center;
     max-width: 500px;
 }
+
 .comparison p {
     grid-column-start: 2;
     width: 400px;
     place-self: center;
 }
+
 .uni_grid {
     display: grid;
     width: 100vw;
 }
+
 .universities {
     display: grid;
     grid-template-columns: repeat(5, 15vw);
@@ -283,48 +307,57 @@ body {
     margin-top: 50px;
     place-self: center;
 }
+
 .headline_uni {
-    grid-column-start:2;
+    grid-column-start: 2;
     grid-column-end: 5;
     place-self: center;
     color: #203F7E;
 }
+
 .universities img {
     height: 7vw;
     grid-row: 2;
     transition: transform .2s;
     place-self: center;
 }
+
 .universities img:hover {
     transform: scale(1.3);
 }
+
 .universities a {
     grid-row: 3;
     grid-column-start: 3;
     place-self: center;
 }
+
 .prices {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows:  150px 50px auto;
+    grid-template-rows: 150px 50px auto;
     margin-top: 50px;
 }
+
 #school {
     width: 200px;
     float: left;
-    place-self:start;
+    place-self: start;
     grid-column: 1;
     grid-row: 1;
     z-index: 10;
 }
-.prices img{
+
+.prices img {
     display: block;
     width: 70vw;
     place-self: center;
 }
+
 .prices h2 {
     place-self: center;
 }
+
 .reviews {
     width: 100vw;
     display: grid;
@@ -332,11 +365,13 @@ body {
     grid-template-rows: auto auto;
     margin-top: 50px;
 }
+
 .headline_reviews {
     grid-column: 2;
     place-self: center;
     color: #203F7E;
 }
+
 .review {
     width: 80%;
     place-self: center;
@@ -348,31 +383,37 @@ body {
     min-height: 300px;
     max-width: 350px;
 }
+
 .review img {
     width: 25%;
     place-self: center;
 }
+
 .review h3 {
     place-self: center;
     color: #F1A34F;
 }
+
 .review p {
     width: 80%;
     place-self: center;
     text-align: center;
 }
+
 .FAQ {
     display: grid;
     margin-top: 50px;
     row-gap: 30px;
     column-gap: 30px;
 }
+
 .faq_button {
     border: none;
     background-color: transparent;
     cursor: pointer;
     place-self: center;
 }
+
 .question {
     background-color: white;
     border-radius: 7px;
@@ -383,10 +424,9 @@ body {
     place-self: center;
     row-gap: 20px;
     min-width: 310px;
-
 }
 
-.question td + td {
+.question td+td {
     justify-self: start;
 }
 
@@ -399,14 +439,18 @@ body {
     height: 40px;
     place-self: center;
 }
+
 .question p {
     width: 80%;
     place-self: center;
 }
+
 .footer {
     margin-top: 500px;
 }
+
 /* ---------------------Services-------------------- */
+
 .img-grid {
     display: grid;
     box-sizing: border-box;
